<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nivel2"
    android:backgroundTint="#5C000000"
    android:backgroundTintMode="src_over">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/comic_neue_light"
        android:text="@string/nivel2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_light"
        android:text="@string/objetivo10"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/box"
        android:layout_width="212dp"
        android:layout_height="237dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.722"
        app:srcCompat="@drawable/box" />

    <ImageView
        android:id="@+id/figura"
        android:layout_width="67dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="@+id/box"
        app:layout_constraintEnd_toEndOf="@+id/box"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/box"
        app:layout_constraintTop_toTopOf="@+id/box"
        app:layout_constraintVertical_bias="0.427" />

    <TextView
        android:id="@+id/contador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/box"
        app:layout_constraintEnd_toEndOf="@+id/box"
        app:layout_constraintStart_toStartOf="@+id/box" />

    <TextView
        android:id="@+id/textViewTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_light"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/popImg"
        android:layout_width="250dp"
        android:layout_height="244dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/contador"
        app:layout_constraintEnd_toEndOf="@+id/box"
        app:layout_constraintStart_toStartOf="@+id/box"
        app:srcCompat="@drawable/pop"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/circulo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:tag="circulo"
                app:srcCompat="@drawable/circle" />

            <View
                android:id="@+id/divider7"
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/triangulo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:tag="triangulo"
                app:srcCompat="@drawable/triangle" />

            <View
                android:id="@+id/divider8"
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/cuadrado"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:tag="cuadrado"
                app:srcCompat="@drawable/rectangle" />
        </LinearLayout>

        <View
            android:id="@+id/divider11"
            android:layout_width="249dp"
            android:layout_height="12dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/corazon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:tag="corazon"
                app:srcCompat="@drawable/heart" />

            <View
                android:id="@+id/divider71"
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/estrella"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:tag="estrella"
                app:srcCompat="@drawable/star" />

            <View
                android:id="@+id/divider81"
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/rombo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:tag="rombo"
                app:srcCompat="@drawable/rombo" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewGanar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:cardBackgroundColor="#C9000000"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="#8069AF"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_neue_light"
                    android:text="@string/ganaste"
                    android:textColor="#FFFFFF"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="143dp"
                    app:srcCompat="@drawable/feliz" />

                <Button
                    android:id="@+id/buttonSiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_neue_light"
                    android:onClick="siguienteNivel"
                    android:text="@string/siguiente"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewPerder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:cardBackgroundColor="#C9000000"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="#8069AF"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_neue_light"
                    android:text="@string/perdiste"
                    android:textColor="#FFFFFF"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="180dp"
                    android:layout_height="143dp"
                    app:srcCompat="@drawable/perder" />

                <Button
                    android:id="@+id/buttonReiniciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_neue_light"
                    android:onClick="reinciarNivel"
                    android:text="@string/reiniciar"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewInicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:cardBackgroundColor="#C9000000"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="#8069AF"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_neue_light"
                    android:text="@string/nivel2"
                    android:textColor="#FFFFFF"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <ImageView

                    android:layout_width="180dp"
                    android:layout_height="143dp"
                    app:srcCompat="@drawable/logo" />

                <Button
                    android:id="@+id/buttonComenzar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_neue_light"
                    android:onClick="comenzarNivel"
                    android:text="@string/listo"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>